# Specktral

./: LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: CI.yaml
specktral/: composite.py  multi_component.py  utils.py
specktral/bases/: Chebychev.py  Fourier.py  Ultraspherical.py  __init__.py  core.py
tests/: test_composite.py  test_multi_component.py
tests/test_bases/: test_Chebychev.py  test_Fourier.py  test_Ultraspherical.py  test_core.py
