[project]
name = 'Specktral'
version = '0.0'
description = 'A lightweight implementation of spectral disctretizations for research purposes'
license = {text = "BSD-2-Clause"}
readme = 'README.md'
authors=[
    {name='Thomas Saupe', email='t.baumann@fz-juelich.de'},
    ]


classifiers = [
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    'numpy>=1.15.4',
    'scipy>=0.17.1',
    ]

[project.optional-dependencies]
dev = [
    'pre-commit',
    'pytest',
    'pytest-cov',
    'matplotlib>=3.0',
    ]

examples = [
    'matplotlib>=3.0',
    'jupyter',
]
